# smallPolyRoots

./: .gitignore  CMakeLists.txt  PolyEval.cpp  PolyEval.hpp  Polynomial.cpp  Polynomial.hpp  README.md  RandCoeffs.cpp  RandCoeffs.hpp  a.out  driver.cpp  introToRoots.ipynb  readExPicture.ipynb  testCoeffs.csv  tools.cpp  tools.hpp
.ipynb_checkpoints/: readExPicture-checkpoint.ipynb
headers/: AxesEval.hpp  FlatHalfPoly.hpp  HalfPolyEval.hpp  PolyEval.hpp  Polynomial.hpp  QuartPolyEval.hpp  RandCoeffs.hpp  tools.hpp
python/: analyzeImgs.ipynb  introToRoots.ipynb  readExPicture.ipynb
src/: AxesEval.cpp  FlatHalfPoly.cpp  HalfPolyEval.cpp  PolyEval.cpp  Polynomial.cpp  QuartPolyEval.cpp  RandCoeffs.cpp  charPolyCoeffs.csv  driver.cpp  driver2.cpp  driver3.cpp  driver4.cpp  driver5.cpp  getMatElems.cpp  testCoeffs2.csv  testCoeffsOnes.csv  tools.cpp
